Final ML Stability Fix: Reverted to memory-safe heuristic and updated dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn
 pydantic
 gunicorn
 python-multipart
-# CRITICAL: Libraries for Hugging Face audio processing
-torch
+## CRITICAL: Libraries for Hugging Face audio processing
+ torch
 torchaudio
 transformers
 librosa
