--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi
 uvicorn
 pydantic
-gunicorn
 python-multipart
-# CRITICAL FIX: Only include basic NumPy for memory-safe acoustic analysis
 numpy
-torch
-torchaudio
+librosa
+soundfile
