--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 fastapi
-gunicorn
 uvicorn
 pydantic
+gunicorn
 python-multipart
+# CRITICAL FIX: Only include basic NumPy for memory-safe acoustic analysis
 numpy
-librosa
-soundfile
+
+
+
+
+
